# sphinx-timeline

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/_static/: custom.css
src/sphinx_subfigure/: __init__.py  _compat.py  main.py  tr_html.py  tr_latex.py
src/sphinx_timeline/: __init__.py  dtime.py  main.py
src/sphinx_timeline/static/: datetime.js  default.css
tests/: test_dtime.py  test_simple.py
tests/fixtures/: build_html.txt  build_latex.txt  posttransform_html.txt  posttransform_latex.txt  posttransform_man.txt
