[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_subfigure"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Framework :: Sphinx :: Extension",
]
keywords = ["sphinx", "subfigure"]
requires-python = ">=3.7"
dependencies = ["sphinx"]

[project."optional-dependencies"]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    "pytest-param-files",
    "sphinx-pytest>=0.0.4",
    "beautifulsoup4",
]
docs = [
    "myst-parser",
    "furo"
]

[project.urls]
Homepage = "https://github.com/chrisjsewell/sphinx-subfigure"

[tool.isort]
profile = "black"
force_sort_within_sections = true
